objects/Test_Project__c.object
<CustomObject>
    <fields>
        <fullName>Owner_email__c</fullName>
        <label>Owner_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Price_P__c</fullName>
        <label>Price_P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_manager_email__c</fullName>
        <label>Project_manager_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Term_T__c</fullName>
        <label>Term_T</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCompleated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCompleated</label>
        <type>Checkbox</type>
    </fields>
    <label>Test Project</label>
    <nameField>
        <label>Test Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>